Fixed scaling issue on mobile devices

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ user-select: none;
 
 html,body
 {
-  transform: scale(1.5);
+  zoom: 1.5;
 }
 
 }
